# bubbles-lint

./: LICENSE  README.md  pyproject.toml
bubbles/: __init__.py  cli.py  config.py  models.py  report.py  scanner.py
bubbles/rules/: __init__.py  ai_smells.py  boundaries.py  leaks.py  registry.py  size.py
bubbles_lint/: __init__.py  cli.py  config.py  models.py  report.py  scanner.py
bubbles_lint/rules/: __init__.py  ai_smells.py  boundaries.py  imports.py  leaks.py  registry.py  size.py
tests/: test_rules.py
