[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bubbles-lint"
version = "0.1.1"
description = "A Python-first architectural linter for small, composable, Unix-like code."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Bubbles Lint contributors" }
]
keywords = ["architecture", "linter", "static-analysis", "python", "unix-philosophy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bubbles-lint = "bubbles_lint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bubbles_lint"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
